@@ -28,7 +28,6 @@ import org.brailleblaster.perspectives.braille.messages.Message;
 import org.brailleblaster.perspectives.braille.messages.Sender;
 import org.brailleblaster.utd.internal.xml.FastXPath;
 import org.brailleblaster.utd.internal.xml.XMLHandler;
-import org.brailleblaster.utd.internal.xml.XMLHandler2;
 import org.brailleblaster.utd.properties.UTDElements;
 import org.brailleblaster.utd.utils.TableUtils;
 import org.brailleblaster.utils.NamespacesKt;
@@ -36,6 +35,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.stream.StreamSupport;
 
 public class MapList extends LinkedList<@NotNull TextMapElement> {
     final @NotNull Manager dm;
@@ -157,8 +157,8 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
     private int getStartBrailleOffset(TextMapElement tme) {
         if (tme instanceof TableTextMapElement
                 && !((TableTextMapElement) tme).tableElements.isEmpty()
-                && !((TableTextMapElement) tme).tableElements.get(0).brailleList.isEmpty()) {
-            return ((TableTextMapElement) tme).tableElements.get(0).brailleList.get(0).getStart(this);
+                && !((TableTextMapElement) tme).tableElements.getFirst().brailleList.isEmpty()) {
+            return ((TableTextMapElement) tme).tableElements.getFirst().brailleList.getFirst().getStart(this);
         } else if (!tme.brailleList.isEmpty()) {
             return tme.brailleList.getFirst().getStart(this);
         }
@@ -168,8 +168,8 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
     private int getEndBrailleOffset(TextMapElement tme) {
         if (tme instanceof TableTextMapElement
                 && !((TableTextMapElement) tme).tableElements.isEmpty()
-                && !((TableTextMapElement) tme).tableElements.get(0).brailleList.isEmpty()) {
-            return ((TableTextMapElement) tme).tableElements.get(((TableTextMapElement) tme).tableElements.size() - 1).brailleList.getLast().getEnd(this);
+                && !((TableTextMapElement) tme).tableElements.getFirst().brailleList.isEmpty()) {
+            return ((TableTextMapElement) tme).tableElements.getLast().brailleList.getLast().getEnd(this);
         } else if (!tme.brailleList.isEmpty()) {
             return tme.brailleList.getLast().getEnd(this);
         }
@@ -400,7 +400,7 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
                 && !(this.get(countDown) instanceof PageIndicatorTextMapElement)
                 && doc.getParent(this.get(countDown).getNode()).equals(parent)) {
 
-            list.add(0, this.get(countDown));
+            list.addFirst(this.get(countDown));
             countDown--;
         }
 
@@ -431,7 +431,7 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
         int countDown = index - 1;
         int countUp = index + 1;
         while (countDown >= 0 && get(countDown).getNodeParent() != null && doc.getParent(this.get(countDown).getNode()).equals(parent)) {
-            list.add(0, countDown);
+            list.addFirst(countDown);
             countDown--;
         }
 
@@ -468,12 +468,12 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
             //Text nodes under a <m:math> tag are not in the map list
             //However they are all under an element in the m: namespace
             //Find the INLINE.MATHML tag (which wraps <m:math>) then get <m:math>
-            n = XMLHandler.ancestorVisitor(
+            n = XMLHandler.Companion.ancestorVisitor(
                     n,
                     curAncestor -> BBX.INLINE.MATHML.isA(curAncestor.getParent())
             );
         }
-        Node potentialTable = XMLHandler.ancestorVisitor(n, e -> BBX.CONTAINER.TABLE.isA(e) && "simple".equals(((Element) e).getAttributeValue("format")));
+        Node potentialTable = XMLHandler.Companion.ancestorVisitor(Objects.requireNonNull(n), e -> BBX.CONTAINER.TABLE.isA(e) && "simple".equals(((Element) e).getAttributeValue("format")));
         if (potentialTable != null) {
             n = potentialTable;
         }
@@ -490,8 +490,8 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
         List<Node> children = new ArrayList<>();
         children.add(n);
         if (n instanceof Element && !BBX.CONTAINER.TABLE.isA(n)) {
-            children.addAll(FastXPath.descendant(n).stream().filter(node ->
-                    XMLHandler.ancestorElementNot(node, UTDElements.BRL::isA)).toList());
+            children.addAll(StreamSupport.stream(FastXPath.descendant(n).spliterator(), false).filter(node ->
+                    XMLHandler.Companion.ancestorElementNot(node, UTDElements.BRL::isA)).toList());
         }
 
         for (int i = startIndex; i < this.size(); i++) {
@@ -667,7 +667,7 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
                     .append(". Braillelist size: ")
                     .append(curTME.brailleList.size())
                     .append(" Node: ")
-                    .append(curTME.getNode() == null ? "null" : XMLHandler2.toXMLSimple(curTME.getNode()))
+                    .append(curTME.getNode() == null ? "null" : XMLHandler.toXMLSimple(curTME.getNode()))
                     .append("\n");
             i++;
             if (showBrailleList) {
@@ -678,7 +678,7 @@ public class MapList extends LinkedList<@NotNull TextMapElement> {
                             .append(" -- Index:")
                             .append(subI)
                             .append(" Braille: ")
-                            .append(brailleMapElement.getNode() == null ? "null" : XMLHandler2.toXMLSimple(brailleMapElement.getNode()))
+                            .append(brailleMapElement.getNode() == null ? "null" : XMLHandler.toXMLSimple(brailleMapElement.getNode()))
                             .append("\n");
                     subI++;
                 }
